--- a/model prediction.ipynb
+++ b/model prediction.ipynb
@@ -8,13 +8,26 @@
    },
    "outputs": [],
    "source": [
-    "# Read Freesurfer Features\n",
+    "# imports & config\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
     "import nibabel as nb\n",
     "import pandas as pd\n",
+    "import glob\n",
     "\n",
+    "output_folder = 'output'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Read Freesurfer Features\n",
     "\n",
     "def _vectorize_fs_surf(in_data_file):\n",
     "    img = nb.load(in_data_file)\n",
@@ -47,15 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import glob\n",
-    "output_folder = 'output'\n",
-    "\n",
     "aseg_files = []\n",
     "lh_area_files = []\n",
     "rh_area_files = []\n",
@@ -63,29 +73,28 @@
     "rh_thickness_files = []\n",
     "\n",
     "for r,d,f in os.walk(output_folder):\n",
-    "                for file in f:\n",
-    "                    if file.endswith('aseg') and not file.startswith('.'):\n",
-    "                        aseg_files.append(os.path.join(r, file))\n",
-    "                    if file.endswith('lh.area.mgh') and not file.startswith('.'):\n",
-    "                        lh_area_files.append(os.path.join(r, file))\n",
-    "                    if file.endswith('rh.area.mgh') and not file.startswith('.'):\n",
-    "                        rh_area_files.append(os.path.join(r, file))\n",
-    "                    if file.endswith('lh.thickness.mgh') and not file.startswith('.'):\n",
-    "                        lh_thickness_files.append(os.path.join(r, file))\n",
-    "                    if file.endswith('rh.thickness.mgh') and not file.startswith('.'):\n",
-    "                        rh_thickness_files.append(os.path.join(r, file))"
+    "    for file in f:\n",
+    "        if file.endswith('aseg') and not file.startswith('.'):\n",
+    "            aseg_files.append(os.path.join(r, file))\n",
+    "        if file.endswith('lh.area.mgh') and not file.startswith('.'):\n",
+    "            lh_area_files.append(os.path.join(r, file))\n",
+    "        if file.endswith('rh.area.mgh') and not file.startswith('.'):\n",
+    "            rh_area_files.append(os.path.join(r, file))\n",
+    "        if file.endswith('lh.thickness.mgh') and not file.startswith('.'):\n",
+    "            lh_thickness_files.append(os.path.join(r, file))\n",
+    "        if file.endswith('rh.thickness.mgh') and not file.startswith('.'):\n",
+    "            rh_thickness_files.append(os.path.join(r, file))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# traverse subjects\n",
-    "from itertools import chain\n",
     "\n",
     "for i in range(len(aseg_files)):\n",
     "    subj_data = get_data(lh_thickness_files[i], rh_thickness_files[i], lh_area_files[i], rh_area_files[i], aseg_files[i])\n",
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
